[package]
name = "voting_system"
version = "0.1.0"
edition = "2021"

[dependencies]
dotenv = "0.15"         # For loading environment variables
reqwest = { version = "0.11", features = ["json"] }  # For HTTP requests
tokio = { version = "1", features = ["full"] }  # For async support
serde = { version = "1.0", features = ["derive"] }  # For JSON serialization/deserialization
serde_json = "1.0"